--- a/EvercityRoleplay.html
+++ b/EvercityRoleplay.html
@@ -3,7 +3,7 @@
     <head>
         <title>Evercity Roleplay</title>
         <div id="main">
-            <img src="file:///C:/Users/hegek/Downloads/New%20Project%20(3).png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <button>Info</button> <button>Forms</button> <button>Rules</button>
+            <img src="EvercityRoleplayWebsite/evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <button>Info</button> <button>Forms</button> <button>Rules</button>
           </div>
     </head>
     <body>
