--- a/EvercityRoleplay.html
+++ b/EvercityRoleplay.html
@@ -3,7 +3,7 @@
     <head>
         <title>Evercity Roleplay</title>
         <div id="main">
-            <img src="evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <button>Info</button> <button>Applications</button> <a href="Rules.html" class="button">Rules</a>
+            <img src="evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <button>Info</button> <button>Applications</button> <button><a href="Rules.html">Rules</a></button>
           </div>
     </head>
     <body>
