--- a/EvercityRoleplay.html
+++ b/EvercityRoleplay.html
@@ -3,7 +3,7 @@
     <head>
         <title>Evercity Roleplay</title>
         <div id="main">
-            <img src="evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <button>Info</button> <button>Applications</button> <button><a href="Rules.html">Rules</a></button>
+            <img src="evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <a href="Info.html"><button>Info</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
           </div>
     </head>
     <body>
