--- a/Applications.html
+++ b/Applications.html
@@ -3,13 +3,13 @@
     <head>
         <title>Applications</title>
         <div id="main">
-            <img src="evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <button>Main</button>
+            <img src="evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <a href="EvercityRoleplay.html"><button>Main</button></a>
           </div>
     </head>
     <body>
         <style>
             #main {
-  width: 600px;
+  width: 100px;
 }
 
 img{
