--- a/Rules.html
+++ b/Rules.html
@@ -3,7 +3,7 @@
     <head>
         <title>Rules</title>
         <div id="main">
-            <img src="evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <button>Main</button>
+            <img src="evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <a href="EvercityRoleplay.html"><button>Main</button></a>
           </div>
     </head>
     <body>
