--- a/Applications.html
+++ b/Applications.html
@@ -3,7 +3,7 @@
     <head>
         <title>Applications</title>
         <div id="main">
-            <img src="evercityroleplay.png" alt="Image!"><h1>Evercity<br>Roleplay</h1> <a href="EvercityRoleplay.html"><button>Main</button></a>
+            <img src="evercityroleplay.png" alt="Image!"> <h1>Applications</h1> <a href="EvercityRoleplay.html"><button>Main</button></a>
           </div>
     </head>
     <body>
