--- a/EvercityRoleplay.html
+++ b/EvercityRoleplay.html
@@ -5,6 +5,7 @@
         <div id="main">
             <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="Info.html"><button>Info</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
           </div>
+          <h2>Evercity Roleplay</h2>
     </head>
     <body>
         <style>
@@ -17,10 +18,18 @@ img{
     height: 75px;
 }
 
+h2{
+  margin-top: 100px;
+  font-family: cursive;
+  text-align: center;
+  color:rgb(52, 252, 255);
+  font-size: 100px;
+}
+
 body {
   background-image: url('https://devforum-uploads.s3.dualstack.us-east-2.amazonaws.com/uploads/optimized/4X/4/8/9/489400c0c1384cab6ce5fa9273ca887322a18547_2_690x332.jpeg');
   background-position: center;
-  background-size: 2500px;
+  background-size: 3000px;
 }
 
 h1 {
