--- a/Rules.html
+++ b/Rules.html
@@ -5,11 +5,37 @@
         <div id="main">
             <img src="evercityroleplay.png" alt="Image!"> <h1>Rules</h1> <a href="EvercityRoleplay.html"><button>Main</button></a>
           </div>
+          <h2>Rules</h2>
+          <div style="text-align: center;">
+          <div style="display: inline-block; text-align: left;">
+            <h3>Discord</h3>
+          <p>- All Rules that is in Discord TOS (Warning - perm ban)
+            <br>- No Leaking (warning)
+            <br>- No Promoting (warning)</p>
+            
+            <h3>Ingame</h3>
+              <p>- No Selling stuff ingame for real money (perm ban)
+            <br>- All rules that is in the Discord server (warning - perm ban)
+            <br>- Don't use glitches to give yourself benefits (warning)
+            <br>- No cheating (perm ban)
+            <br>- No scamming (ban)</p>
+          </div>
+        </div>
     </head>
     <body>
         <style>
             #main {
-  width: 100px;
+  width: 400px;
+}
+
+h3{
+  padding-left: 300px;
+  background-color: wheat;
+  font-size: 50px;
+  font-family: cursive;
+  margin-bottom: -25px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
 }
 
 img{
@@ -17,10 +43,28 @@ img{
     height: 75px;
 }
 
+p{
+  font-size: 25px;
+  padding-left: 50px;
+  font-family: cursive;
+  background-color: wheat;
+  border-bottom-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+  padding-bottom: 10px;
+}
+
+h2{
+  margin-top: 100px;
+  font-family: cursive;
+  text-align: center;
+  color:rgb(52, 252, 255);
+  font-size: 100px;
+}
+
 body {
   background-image: url('https://devforum-uploads.s3.dualstack.us-east-2.amazonaws.com/uploads/optimized/4X/4/8/9/489400c0c1384cab6ce5fa9273ca887322a18547_2_690x332.jpeg');
   background-position: center;
-  background-size: 2500px;
+  background-size: 3000px;
 }
 
 h1 {
