--- a/Applications.html
+++ b/Applications.html
@@ -3,16 +3,32 @@
     <head>
         <title>Applications</title>
         <div id="main">
-            <img src="evercityroleplay.png" alt="Image!"> <h1>Applications</h1> <a href="EvercityRoleplay.html"><button>Main</button></a>
+          <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="EvercityRoleplay.html"><button id= "btn1">Main</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a>
+          </div>
+          <h2>Applications</h2>
+          <div id="Applications">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc012xqsG8tZic9mv7xaHyJ9sYh_Mt6pEVgVipiif537l70UA/viewform"><button id= "btn2">Tester</button></a> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWWA1QtPiCYWKGGZ5Q8FCivB1KLmK_fDKSV_IO5we2AvCpUA/viewform"><button id= "btn3">Developer</button></a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcC270cPEnAV1jGQeKIWGEVpHKmJrjdXE1_6Q-CSkihGaOzQ/viewform"><button id= "btn4">Head Developer</button></a>
           </div>
     </head>
     <body>
         <style>
             #main {
+  width: 600px;
+}
+
+#applycations {
   width: 400px;
 }
 
-img{
+h2{
+  margin-top: 100px;
+  font-family: cursive;
+  text-align: center;
+  color:rgb(52, 252, 255);
+  font-size: 100px;
+}
+
+img {
     width: 75px;
     height: 75px;
 }
@@ -29,7 +45,52 @@ h1 {
     display: inline-block;
 }
 
-button {
+#btn2 {
+  margin-top: 100px;
+  margin-left: 450px;
+  width: 400;
+  height: 300px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-width: 0px;
+  background-color:rgb(254, 100, 100);
+  color: rgb(255, 255, 255);
+  font-size: 50px;
+}
+
+#btn3 {
+  margin-top: 100px;
+  margin-left: 200px;
+  width: 400px;
+  height: 300px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-width: 0px;
+  background-color:rgb(254, 100, 100);
+  color: rgb(255, 255, 255);
+  font-size: 50px;
+}
+
+#btn4 {
+  margin-top: 100px;
+  margin-left: 450px;
+  width: 400px;
+  height: 300px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-width: 0px;
+  background-color:rgb(254, 100, 100);
+  color: rgb(255, 255, 255);
+  font-size: 50px;
+}
+
+#btn1 {
     margin-left: 10px;
   float: right;
   background-color:rgb(254, 100, 100);
@@ -42,7 +103,20 @@ button {
   border-bottom-left-radius: 25px;
   border-width: 0px;
 }
-button:hover {
+
+#btn2:hover{
+  background-color:rgb(52, 252, 255);
+}
+
+#btn3:hover{
+  background-color:rgb(52, 252, 255);
+}
+
+#btn4:hover{
+  background-color:rgb(52, 252, 255);
+}
+
+#btn1:hover {
     background-color: rgb(255, 255, 40);
     color: rgb(0, 0, 0);
   animation: shake 2s linear infinite;
