--- a/Info.html
+++ b/Info.html
@@ -3,18 +3,27 @@
     <head>
         <title>Info</title>
         <div id="main">
-            <img src="evercityroleplay.png" alt="Image!"> <h1>Info</h1> <a href="EvercityRoleplay.html"><button>Main</button></a>
+          <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="EvercityRoleplay.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
           </div>
+          <h2>Info</h2>
     </head>
     <body>
         <style>
             #main {
-  width: 400px;
+  width: 600px;
 }
 
 img{
     width: 75px;
     height: 75px;
+}
+
+h2{
+  margin-top: 100px;
+  font-family: cursive;
+  text-align: center;
+  color:rgb(52, 252, 255);
+  font-size: 100px;
 }
 
 body {
