--- a/Rules.html
+++ b/Rules.html
@@ -3,7 +3,7 @@
     <head>
         <title>Rules</title>
         <div id="main">
-            <img src="evercityroleplay.png" alt="Image!"> <h1>Rules</h1> <a href="EvercityRoleplay.html"><button>Main</button></a>
+          <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="Info.html"><button>Info</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="EvercityRoleplay.html"><button>Main</button></a>
           </div>
           <h2>Rules</h2>
           <div style="text-align: center;">
@@ -25,7 +25,7 @@
     <body>
         <style>
             #main {
-  width: 400px;
+  width: 600px;
 }
 
 h3{
