--- a/EvercityRoleplay.html
+++ b/EvercityRoleplay.html
@@ -7,17 +7,33 @@
           </div>
           <h2>Evercity Roleplay</h2>
           <a href="https://www.roblox.com/games/2359201139/Evercity-Roleplay-BETA"><button id= "btn2">Play</button></a>
-          <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/>
+          <hr>
+          <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/> <img src="cookie.png"  id="img2"/> <img src="wade.png" id="img2"/>
+          <p id="txt1">Oliver (Creator)</p> <p id="txt2">Alex (Main Creator)</p> <p id="txt3">IICoxokie (Developer)</p> <p id="txt4">Wade (Head Developer)</p>
     </head>
     <body>
         <style>
             #main {
-  width: 600px;
+  width: 800px;
+}
+
+html, body {
+   max-width: 100%;
+   overflow-x: hidden;
 }
 
 #img1 {
     width: 75px;
     height: 75px;
+}
+
+hr{
+  margin-top: 150px;
+  height: 10px;
+  width: 10000px;
+  margin-left: -10px;
+  background-color:rgb(254, 100, 100);
+  border: 0px;
 }
 
 h2{
@@ -28,8 +44,40 @@ h2{
   font-size: 100px;
 }
 
+#txt1{
+  margin-top: -5px;
+  font-family: cursive;
+  margin-left: 100px;
+  color:rgb(254, 100, 100);
+  font-size: 25px;
+}
+
+#txt2{
+  margin-top: -55px;
+  margin-left: 400px;
+  font-family: cursive;
+  color:rgb(254, 100, 100);
+  font-size: 25px;
+}
+
+#txt3{
+  margin-top: -60px;
+  font-family: cursive;
+  margin-left: 700px;
+  color:rgb(254, 100, 100);
+  font-size: 25px;
+}
+
+#txt4{
+  margin-top: -60px;
+  font-family: cursive;
+  margin-left: 1000px;
+  color:rgb(254, 100, 100);
+  font-size: 25px;
+}
+
 body {
-  background-image: url('https://devforum-uploads.s3.dualstack.us-east-2.amazonaws.com/uploads/optimized/4X/4/8/9/489400c0c1384cab6ce5fa9273ca887322a18547_2_690x332.jpeg');
+  background-image: url(background.png);
   background-position: center;
   background-size: 4000px;
 }
@@ -41,8 +89,10 @@ h1 {
 }
 
 #img2 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
+  margin-left: 100px;
+  border-radius: 100px;
 }
 
 #btn1 {
