--- a/EvercityRoleplay.html
+++ b/EvercityRoleplay.html
@@ -10,7 +10,7 @@
           <hr>
           <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/> <img src="cookie.png"  id="img2"/> <img src="wade.png" id="img2"/>
           <p id="txt1">Oliver (Creator)</p> <p id="txt2">Alex (Main Creator)</p> <p id="txt3">IICoxokie (Developer)</p> <p id="txt4">Wade (Head Developer)</p>
-    </head>ff
+    </head>
     <body>
         <style>
             #main {
