--- a/Applications.html
+++ b/Applications.html
@@ -34,7 +34,7 @@ img {
 }
 
 body {
-  background-image: url('https://devforum-uploads.s3.dualstack.us-east-2.amazonaws.com/uploads/optimized/4X/4/8/9/489400c0c1384cab6ce5fa9273ca887322a18547_2_690x332.jpeg');
+  background-image: url(background.png);
   background-position: center;
   background-size: 3000px;
 }
