--- a/Info.html
+++ b/Info.html
@@ -6,11 +6,53 @@
           <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="EvercityRoleplay.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
           </div>
           <h2>Info</h2>
+          <div style="text-align: center;">
+            <div style="display: inline-block; text-align: left;">
+            <p>This is a roleplay game. 👪
+              <br>Enjoy your life and do what you ever dreamed to do.😊
+              <h3>Report Players</h3>
+              <p>
+              <br>Make sure to report a player if their cheating or ruining peoples fun.
+              <br>To report you need to join our discord and report the player with making a ticket in the ticket channel.
+              <h4>Sosial Medias</h4>
+            <br> <a href="https://discord.gg/NpUBCzBVrU"><img src="Discord.png" id="img3">
+            </div>
     </head>
     <body>
         <style>
             #main {
   width: 600px;
+}
+
+h4{
+  font-family: cursive;
+  font-size: 50px;
+  color: rgb(52, 252, 255);
+  margin-left: 400px;
+  margin-top: 100px;
+}
+
+h3{
+  padding-left: 400px;
+  font-size: 50px;
+  font-family: cursive;
+  margin-bottom: -25px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+  color: rgb(52, 252, 255);
+}
+
+p{
+  font-size: 25px;
+  padding-left: 50px;
+  font-family: cursive;
+  padding-bottom: 10px;
+}
+
+#img3{
+  margin-left: 400px;
+  margin-top: -50px;
+  border-radius: 100px;
 }
 
 img{
@@ -33,7 +75,7 @@ body {
 }
 
 h1 {
-    color:rgb(52, 252, 255);
+    color: rgb(255, 255, 40);
   margin: 0;
     display: inline-block;
 }
@@ -52,8 +94,7 @@ button {
   border-width: 0px;
 }
 button:hover {
-    background-color: rgb(255, 255, 40);
-    color: rgb(0, 0, 0);
+    background-color:rgb(52, 252, 255);
   animation: shake 2s linear infinite;
   animation-iteration-count: infinite;
 }
