--- a/Info.html
+++ b/Info.html
@@ -3,7 +3,7 @@
     <head>
         <title>Info</title>
         <div id="main">
-          <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="EvercityRoleplay.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
+          <img src="evercityroleplay.png"  id="img1"> <h1>Evercity<br>Roleplay</h1> <a href="EvercityRoleplay.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
           </div>
           <h2>Info</h2>
           <div style="text-align: center;">
@@ -15,7 +15,7 @@
               <br>Make sure to report a player if their cheating or ruining peoples fun.
               <br>To report you need to join our discord and report the player with making a ticket in the ticket channel.
               <h4>Sosial Medias</h4>
-            <br> <a href="https://discord.gg/NpUBCzBVrU"><img src="Discord.png" id="img3">
+            <br> <a href="https://discord.gg/NpUBCzBVrU"><img src="Discord.png" id="img2">
             </div>
     </head>
     <body>
@@ -49,13 +49,19 @@ p{
   padding-bottom: 10px;
 }
 
-#img3{
+#img2:hover{
+  transform: scale(1.2);
+}
+
+#img2{
   margin-left: 400px;
   margin-top: -50px;
   border-radius: 100px;
+  width: 75px;
+  height: 75px;
 }
 
-img{
+#img1{
     width: 75px;
     height: 75px;
 }
