--- a/Info.html
+++ b/Info.html
@@ -3,7 +3,7 @@
     <head>
         <title>Info</title>
         <div id="main">
-          <img src="evercityroleplay.png"  id="img1"> <h1>Evercity<br>Roleplay</h1> <a href="EvercityRoleplay.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
+          <img src="evercityroleplay.png"  id="img1"> <h1>Evercity<br>Roleplay</h1> <a href="Main.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
           </div>
           <h2>Info</h2>
           <div style="text-align: center;">
