--- a/Rules.html
+++ b/Rules.html
@@ -3,7 +3,7 @@
     <head>
         <title>Rules</title>
         <div id="main">
-          <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="Info.html"><button>Info</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="EvercityRoleplay.html"><button>Main</button></a>
+          <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="Info.html"><button>Info</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Main.html"><button>Main</button></a>
           </div>
           <h2>Rules</h2>
           <div style="text-align: center;">
@@ -18,7 +18,8 @@
             <br>- All rules that is in the Discord server (warning - perm ban)
             <br>- Don't use glitches to give yourself benefits (warning)
             <br>- No cheating (perm ban)
-            <br>- No scamming (ban)</p>
+            <br>- No scamming (ban)
+            <br>- Don't abuse police power ( warning )</p>
           </div>
         </div>
     </head>
