--- a/Info.html
+++ b/Info.html
@@ -8,7 +8,7 @@
           <h2>Info</h2>
           <div style="text-align: center;">
             <div style="display: inline-block; text-align: left;">
-            <p>This is a roleplay game. 👪
+            <p>This is a roleplay game. 👨‍👩‍👧‍👦
               <br>Enjoy your life and do what you ever dreamed to do.😊
               <h3>Report Players</h3>
               <p>
