--- a/Main.html
+++ b/Main.html
@@ -46,8 +46,8 @@ var x = setInterval(function() {
 </script>
           <a href="https://www.roblox.com/games/2359201139/Evercity-Roleplay-BETA"><button id= "btn2">Play</button></a>
           <hr>
-          <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/> <img src="cookie.png"  id="img2"/> <img src="wade.png" id="img2"/> <img src="FreePalestine.png" id="img2"/>
-          <p id="txt1">Oliver (Creator)</p> <p id="txt2">Alex (Main Creator)</p> <p id="txt3">IICoxokie (Developer)</p> <p id="txt4">Wade (Developer)</p> <p id="txt5">Free Palestine (Head Developer)</p>
+          <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/> <img src="cookie.png"  id="img2"/>  <img src="FreePalestine.png" id="img2"/>
+          <p id="txt1">Oliver (Creator)</p> <p id="txt2">Alex (Main Creator)</p> <p id="txt3">IICoxokie (Developer)</p> <p id="txt5">Free Palestine (Head Developer)</p>
     </head>
     <body>
         <style>
