--- a/Applications.html
+++ b/Applications.html
@@ -7,13 +7,32 @@
           </div>
           <h2>Applications</h2>
           <div id="Applications">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc012xqsG8tZic9mv7xaHyJ9sYh_Mt6pEVgVipiif537l70UA/viewform"><button id= "btn2">Tester</button></a> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWWA1QtPiCYWKGGZ5Q8FCivB1KLmK_fDKSV_IO5we2AvCpUA/viewform"><button id= "btn3">Developer</button></a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcC270cPEnAV1jGQeKIWGEVpHKmJrjdXE1_6Q-CSkihGaOzQ/viewform"><button id= "btn2">Head Developer</button></a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScWWA1QtPiCYWKGGZ5Q8FCivB1KLmK_fDKSV_IO5we2AvCpUA/viewform"><button id= "btn3">Developer</button></a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcC270cPEnAV1jGQeKIWGEVpHKmJrjdXE1_6Q-CSkihGaOzQ/viewform"><button id= "btn2">Head Developer</button></a>
           </div>
+          <h5>We now have opened a tester role.
+            <br>Fill this form out and become a tester in no time!
+          </h5>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc012xqsG8tZic9mv7xaHyJ9sYh_Mt6pEVgVipiif537l70UA/viewform?embedded=true" width="640" scrolling="no" height="1783" frameborder="0" marginheight="0" marginwidth="0">Laster inn …</iframe>
     </head>
     <body>
         <style>
             #main {
   width: 600px;
+}
+
+iframe{
+  padding: 60px;
+  width: 550px;
+  margin-left: 500px;
+  overflow-y: hidden;
+}
+
+h5{
+  margin-top: 200px;
+  font-family: cursive;
+  text-align: center;
+  color:rgb(52, 252, 255);
+  font-size: 50px;
 }
 
 #applycations {
@@ -36,18 +55,18 @@ img {
 body {
   background-image: url(background.png);
   background-position: center;
-  background-size: 3000px;
+  background-size: 8000px;
 }
 
 h1 {
     color:rgb(52, 252, 255);
-  margin: 0;
+    margin: 0;
     display: inline-block;
 }
 
 #btn2 {
   margin-top: 100px;
-  margin-left: 450px;
+  margin-left: 200px;
   width: 400;
   height: 300px;
   border-top-left-radius: 25px;
@@ -62,7 +81,7 @@ h1 {
 
 #btn3 {
   margin-top: 100px;
-  margin-left: 200px;
+  margin-left: 450px;
   width: 400px;
   height: 300px;
   border-top-left-radius: 25px;
