--- a/Applications.html
+++ b/Applications.html
@@ -3,7 +3,7 @@
     <head>
         <title>Applications</title>
         <div id="main">
-          <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Main.html"><button id= "btn1">Main</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a>
+          <img src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Main.html"><button id= "btn1">Main</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a>
           </div>
           <h2>Applications</h2>
           <div id="Applications">
@@ -59,7 +59,7 @@ body {
 }
 
 h1 {
-    color:rgb(52, 252, 255);
+    color: rgb(255, 255, 40);
     margin: 0;
     display: inline-block;
 }
