--- a/Info.html
+++ b/Info.html
@@ -3,13 +3,13 @@
     <head>
         <title>Info</title>
         <div id="main">
-          <img src="evercityroleplay.png"  id="img1"> <h1>Evercity<br>Roleplay</h1> <a href="Main.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
+          <img src="main.png"  id="img1"> <h1>Light<br>Studios</h1> <a href="Main.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
           </div>
           <h2>Info</h2>
           <div style="text-align: center;">
             <div style="display: inline-block; text-align: left;">
-            <p>This is a roleplay game. 👨‍👩‍👧‍👦
-              <br>Enjoy your life and do what you ever dreamed to do.😊
+            <h5>Welcome to our Studio! LightStudios. 👨‍👩‍👧‍👦</h5>
+            <p><br>We make alot of different games. Also if you want us to make a different type of game <br>or have suggestions then please contact us at our Discord or Twitter.😊
               <h3>Report Players</h3>
               <p>
               <br>Make sure to report a player if their cheating or ruining peoples fun.
@@ -22,6 +22,13 @@
         <style>
             #main {
   width: 600px;
+}
+
+h5{
+  text-align: center;
+  color: rgb(52, 252, 255);
+  font-family: cursive;
+  font-size: 25px;
 }
 
 h4{
@@ -82,7 +89,7 @@ body {
 
 h1 {
     color: rgb(255, 255, 40);
-  margin: 0;
+    margin: 0;
     display: inline-block;
 }
 
