--- a/Rules.html
+++ b/Rules.html
@@ -3,7 +3,7 @@
     <head>
         <title>Rules</title>
         <div id="main">
-          <img src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="Info.html"><button>Info</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Main.html"><button>Main</button></a>
+          <img src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Info.html"><button>Info</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Main.html"><button>Main</button></a>
           </div>
           <h2>Rules</h2>
           <div style="text-align: center;">
@@ -13,13 +13,12 @@
             <br>- No Leaking (warning)
             <br>- No Promoting (warning)</p>
             
-            <h3>Ingame</h3>
+            <h3>Our games</h3>
               <p>- No Selling stuff ingame for real money (perm ban)
             <br>- All rules that is in the Discord server (warning - perm ban)
             <br>- Don't use glitches to give yourself benefits (warning)
             <br>- No cheating (perm ban)
-            <br>- No scamming (ban)
-            <br>- Don't abuse police power ( warning )</p>
+            <br>- No scamming (ban)</p>
           </div>
         </div>
     </head>
@@ -30,7 +29,7 @@
 }
 
 h3{
-  padding-left: 300px;
+  padding-left: 250px;
   background-color: wheat;
   font-size: 50px;
   font-family: cursive;
@@ -69,13 +68,13 @@ body {
 }
 
 h1 {
-    color:rgb(52, 252, 255);
-  margin: 0;
+    color: rgb(255, 255, 40);
+    margin: 0;
     display: inline-block;
 }
 
 button {
-    margin-left: 10px;
+  margin-left: 10px;
   float: right;
   background-color:rgb(254, 100, 100);
   color: rgb(255, 255, 255);
