--- a/Main.html
+++ b/Main.html
@@ -1,9 +1,9 @@
 <html>
     <html lang="en"></html>
     <head>
-        <title>Evercity Roleplay</title>
+        <title>LightStudios</title>
         <div id="main">
-            <img id= "img1"src="evercityroleplay.png" alt="Image!"> <h1>Evercity<br>Roleplay</h1> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Applications.html"><button id= "btn1">Applications</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a>
+            <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Applications.html"><button id= "btn1">Applications</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a>
           </div>
           <h2>Launching in!</h2>
           <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,7 +44,7 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-          <a href="https://www.roblox.com/games/2359201139/Evercity-Roleplay-BETA"><button id= "btn2">Play</button></a>
+          <a href="https://www.roblox.com/games/2359201139/Evercity-Roleplay-BETA"><button id= "btn2">Join</button></a>
           <hr>
           <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/> <img src="cookie.png"  id="img2"/>  <img src="FreePalestine.png" id="img2"/>
           <p id="txt1">Oliver (Creator)</p> <p id="txt2">Alex (Main Creator)</p> <p id="txt3">IICoxokie (Developer)</p> <p id="txt4">Free Palestine (Head Developer)</p>
@@ -129,8 +129,8 @@ body {
 }
 
 h1 {
-    color:rgb(52, 252, 255);
-  margin: 0;
+    color: rgb(255, 255, 40);
+    margin: 0;
     display: inline-block;
 }
 
