--- a/Main.html
+++ b/Main.html
@@ -7,22 +7,13 @@
           </div>
           <h2>Launching in!</h2>
           <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-  h5{
-    margin-top: -50px;
-  font-family: cursive;
-  text-align: center;
-  color:rgb(255, 255, 40);
-  font-size: 50px;
-  }
-</style>
 </head>
 <body>
 
 <h5 id="demo"></h5>
 
 <script>
-var countDownDate = new Date("2023-10-05 17:00:00").getTime();
+var countDownDate = new Date("2022-10-31 17:00:00").getTime();
 
 var x = setInterval(function() {
 
@@ -54,6 +45,18 @@ var x = setInterval(function() {
             #main {
   width: 600px;
 }
+
+#img1{
+  border-radius: 5px;
+}
+
+h5{
+    margin-top: -50px;
+  font-family: cursive;
+  text-align: center;
+  color:rgb(255, 255, 40);
+  font-size: 50px;
+  }
 
 html, body {
    max-width: 100%;
