--- a/Main.html
+++ b/Main.html
@@ -44,7 +44,7 @@ var x = setInterval(function() {
     </head>
     <body>
         <style>
-            #main {
+#main {
   width: 600px;
 }
 
@@ -55,9 +55,9 @@ h4{
 }
 
 iframe {
-  padding-top: 100px;
-  margin-left: 375px;
-  border-radius: 5px;
+  margin-top: 100px;
+  border-radius: 10px;
+  margin-left: 650px;
 }
 
 #img1{
