--- a/Main.html
+++ b/Main.html
@@ -7,7 +7,6 @@
           </div>
           <h2>Launching in!</h2>
           <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 <body>
 
@@ -48,12 +47,6 @@ var x = setInterval(function() {
   width: 600px;
 }
 
-h4{
-  font-family: cursive;
-  color:rgb(255, 255, 40);
-  font-size: 50px;
-}
-
 iframe {
   margin-top: 100px;
   border-radius: 10px;
@@ -70,11 +63,11 @@ h5{
   text-align: center;
   color:rgb(255, 255, 40);
   font-size: 50px;
-  }
+}
 
 html, body {
    max-width: 100%;
-   overflow-x: hidden;
+   overflow: visible;
 }
 
 #img1 {
@@ -85,7 +78,7 @@ html, body {
 hr{
   margin-top: 150px;
   height: 10px;
-  width: 10000px;
+  width: 1905px;
   margin-left: -10px;
   background-color:rgb(254, 100, 100);
   border: 0px;
