--- a/Info.html
+++ b/Info.html
@@ -15,7 +15,7 @@
               <br>Make sure to report a player if their cheating or ruining peoples fun.
               <br>To report you need to join our discord and report the player with making a ticket in the ticket channel.
               <h4>Sosial Medias</h4>
-            <br> <a href="https://discord.com/invite/NpUBCzBVrU"><img src="Discord.png" id="img2">
+            <br> <a href="https://discord.gg/Gxge8NsbFB"><img src="Discord.png" id="img2">
             </div>
     </head>
     <body>
