--- a/Main.html
+++ b/Main.html
@@ -38,7 +38,7 @@ var x = setInterval(function() {
           <a href="https://www.roblox.com/groups/3812713/peton071"><button id= "btn2">Join</button></a>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/bzXzGMbdQfY" frameborder="0" allowfullscreen></iframe>
           <hr>
-          <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/> <img src="cookie.png"  id="img2"/>  <img src="FreePalestine.png" id="img2"/>
+          <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/> <img src="FreePalestine.png" id="img2"/>
           <p id="txt1">Oliver (Creator)</p> <p id="txt2">Alex (Main Creator)</p> <p id="txt4">Free Palestine (Head Developer)</p>
     </head>
     <body>
@@ -119,7 +119,7 @@ h2{
 #txt4{
   margin-top: -60px;
   font-family: cursive;
-  margin-left: 1000px;
+  margin-left: 675px;
   color:rgb(254, 100, 100);
   font-size: 25px;
 }
