--- a/Main.html
+++ b/Main.html
@@ -38,8 +38,8 @@ var x = setInterval(function() {
           <a href="https://www.roblox.com/groups/3812713/peton071"><button id= "btn2">Join</button></a>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/bzXzGMbdQfY" frameborder="0" allowfullscreen></iframe>
           <hr>
-          <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/> <img src="Meals.png" id="img2"/>
-          <p id="txt1">Oliver (Creator)</p> <p id="txt2">Alex (Main Creator)</p> <p id="txt4">Meals (Head Developer)</p>
+          <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/>
+          <p id="txt1">Oliver (Creator)</p> <p id="txt2">Alex (Main Creator)</p>
     </head>
     <body>
         <style>
