--- a/Main.html
+++ b/Main.html
@@ -39,7 +39,7 @@ var x = setInterval(function() {
           <iframe width="560" height="315" src="https://www.youtube.com/embed/bzXzGMbdQfY" frameborder="0" allowfullscreen></iframe>
           <hr>
           <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/>
-          <p id="txt1">Oliver (Creator)</p> <p id="txt2">Alex (Main Creator)</p>
+          <p id="txt1">Oliver (Owner)</p> <p id="txt2">Alex (Creator)</p>
     </head>
     <body>
         <style>
