--- a/Info.html
+++ b/Info.html
@@ -1,7 +1,7 @@
 <html>
     <html lang="en"></html>
     <head>
-        <title>Info</title>
+      <link rel="stylesheet" href="main.png"><title>Info</title>
         <div id="main">
           <img src="main.png"  id="img1"> <h1>Light<br>Studios</h1> <a href="Main.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
           </div>
@@ -111,7 +111,7 @@ button {
   border-width: 0px;
 }
 button:hover {
-    background-color:rgb(52, 252, 255);
+    background-color: rgb(255, 255, 40);
   animation: shake 2s linear infinite;
   animation-iteration-count: infinite;
 }
