--- a/Main.html
+++ b/Main.html
@@ -2,6 +2,7 @@
     <html lang="en"></html>
     <head>
         <title>LightStudios</title>
+        <link rel="icon" type="image/x-icon" href="main.png">
         <div id="main">
             <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Applications.html"><button id= "btn1">Applications</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a>
           </div>
@@ -46,6 +47,8 @@ var x = setInterval(function() {
 #main {
   width: 600px;
 }
+
+
 
 iframe {
   margin-top: 100px;
