--- a/Info.html
+++ b/Info.html
@@ -1,7 +1,8 @@
 <html>
     <html lang="en"></html>
     <head>
-      <link rel="stylesheet" href="main.png"><title>Info</title>
+      <link rel="stylesheet" href="main.png">
+        <title>Info</title>
         <div id="main">
           <img src="main.png"  id="img1"> <h1>Light<br>Studios</h1> <a href="Main.html"><button>Main</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Rules.html"><button>Rules</button></a>
           </div>
