--- a/Main.html
+++ b/Main.html
@@ -4,9 +4,9 @@
         <title>LightStudios</title>
         <link rel="icon" type="image/x-icon" href="main.png">
         <div id="main">
-            <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Applications.html"><button id= "btn1">Applications</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a>
+          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Applications.html"><button id= "btn1">Applications</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a> <a href="Info.html"><button id= "btn1">Info</button></a> <button id= "btn5">Main</button>
           </div>
-          <h2>Launching in!</h2>
+          <h2>Our next game is launching in!</h2>
           <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -14,7 +14,7 @@
 <h5 id="demo1"></h5>
 
 <script>
-var countDownDate = new Date("2022-10-31 17:00:00").getTime();
+var countDownDate = new Date("2023-1-24 17:00:00").getTime();
 
 var x = setInterval(function() {
 
@@ -36,24 +36,22 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-          <a href="https://www.roblox.com/groups/3812713/peton071"><button id= "btn2">Join</button></a>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/bzXzGMbdQfY" frameborder="0" allowfullscreen></iframe>
+          <a href="https://www.roblox.com/groups/3812713/LightStudios#!/about"><button id= "btn2">Join</button></a>
+          <video controls src="LightStudios.mp4" width="500" heigh="100"></video>
           <hr>
-          <img src="oliver.png"  id="img2"/> <img src="alex.png" id="img2"/>
-          <p id="txt1">Oliver (Owner)</p> <p id="txt2">Alex (Creator)</p>
+          <h2>Staff Team</h2>
+          <p id="txt1">Alex07#4043 (Creator)</p> <br> <p id="txt1">OliverChararcter#5478 (Owner)</p> <br> <p id="txt1">Sopia#7583 (Developer)</p> <br> <p id="txt1">KevinF#0997 (Developer)</p>
     </head>
     <body>
         <style>
 #main {
-  width: 600px;
+  width: 700px;
 }
 
-
-
-iframe {
+video {
   margin-top: 100px;
   border-radius: 10px;
-  margin-left: 650px;
+  margin-left: 700px;
 }
 
 #img1{
@@ -78,6 +76,21 @@ html, body {
     height: 75px;
 }
 
+#btn5 {
+  margin-left: 10px;
+  float: right;
+  background-color:rgb(255, 255, 40);
+  color: rgb(87, 214, 87);
+  width: 100px;
+  height: 30px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-width: 0px;
+  font-weight: 1000;
+}
+
 hr{
   margin-top: 150px;
   height: 10px;
@@ -96,41 +109,10 @@ h2{
 }
 
 #txt1{
-  margin-top: -5px;
+  text-align: center;
+  margin-top: 10px;
   font-family: cursive;
-  margin-left: 100px;
-  color:rgb(254, 100, 100);
-  font-size: 25px;
-}
-
-#txt2{
-  margin-top: -55px;
-  margin-left: 400px;
-  font-family: cursive;
-  color:rgb(254, 100, 100);
-  font-size: 25px;
-}
-
-#txt3{
-  margin-top: -60px;
-  font-family: cursive;
-  margin-left: 700px;
-  color:rgb(254, 100, 100);
-  font-size: 25px;
-}
-
-#txt4{
-  margin-top: -60px;
-  font-family: cursive;
-  margin-left: 675px;
-  color:rgb(254, 100, 100);
-  font-size: 25px;
-}
-
-#txt5{
-  margin-top: -60px;
-  font-family: cursive;
-  margin-left: 1250px;
+  margin-left: 75px;
   color:rgb(254, 100, 100);
   font-size: 25px;
 }
@@ -156,7 +138,7 @@ h1 {
 }
 
 #btn1 {
-    margin-left: 10px;
+  margin-left: 10px;
   float: right;
   background-color:rgb(254, 100, 100);
   color: rgb(255, 255, 255);
@@ -167,6 +149,7 @@ h1 {
   border-bottom-right-radius: 25px;
   border-bottom-left-radius: 25px;
   border-width: 0px;
+  font-weight: 1000;
 }
 
 #btn2 {
@@ -181,6 +164,7 @@ h1 {
   border-bottom-left-radius: 25px;
   border-width: 0px;
   font-size: 75px;
+  
 }
 
 #btn2:hover {
