--- a/Rules.html
+++ b/Rules.html
@@ -3,7 +3,7 @@
     <head>
         <title>Rules</title>
         <div id="main">
-          <img src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Info.html"><button>Info</button></a> <a href="Applications.html"><button>Applications</button></a> <a href="Main.html"><button>Main</button></a>
+          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Applications.html"><button id= "btn1">Applications</button></a> <button id= "btn5">Rules</button> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Main.html"><button id= "btn1">Main</button></a>
           </div>
           <h2>Rules</h2>
           <div style="text-align: center;">
@@ -23,9 +23,24 @@
         </div>
     </head>
     <body>
-        <style>
-            #main {
-  width: 600px;
+<style>
+#main {
+  width: 700px;
+}
+
+#btn5 {
+  margin-left: 10px;
+  float: right;
+  background-color:rgb(255, 255, 40);
+  color: rgb(87, 214, 87);
+  width: 100px;
+  height: 30px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-width: 0px;
+  font-weight: 1000;
 }
 
 img{
@@ -77,7 +92,7 @@ h1 {
     display: inline-block;
 }
 
-button {
+#btn1 {
   margin-left: 10px;
   float: right;
   background-color:rgb(254, 100, 100);
@@ -89,10 +104,12 @@ button {
   border-bottom-right-radius: 25px;
   border-bottom-left-radius: 25px;
   border-width: 0px;
+  font-weight: 1000;
 }
-button:hover {
-    background-color: rgb(255, 255, 40);
-    color: rgb(0, 0, 0);
+
+#btn1:hover {
+  background-color: rgb(255, 255, 40);
+  color: rgb(0, 0, 0);
   animation: shake 2s linear infinite;
   animation-iteration-count: infinite;
 }
