--- a/Main.html
+++ b/Main.html
@@ -37,7 +37,7 @@ var x = setInterval(function() {
 }, 1000);
 </script>
           <a href="https://www.roblox.com/groups/3812713/LightStudios#!/about"><button id= "btn2">Join</button></a>
-          <video controls src="LightStudios.mp4" width="500" heigh="100"></video>
+          <video controls autoplay muted src="LightStudios.mp4" width="500" heigh="100"></video>
           <hr>
           <h2>Staff Team</h2>
           <p id="txt1">Alex07#4043 (Creator)</p> <br> <p id="txt1">OliverChararcter#5478 (Owner)</p> <br> <p id="txt1">Sopia#7583 (Developer)</p> <br> <p id="txt1">KevinF#0997 (Developer)</p>
@@ -168,13 +168,13 @@ h1 {
 }
 
 #btn2:hover {
-    background-color: rgb(87, 250, 87);
-    animation: spin 0.5s linear infinite;
+  background-color: rgb(87, 250, 87);
+  animation: spin 0.5s linear infinite;
 }
 
 #btn1:hover {
-    background-color: rgb(255, 255, 40);
-    color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 40);
+  color: rgb(0, 0, 0);
   animation: shake 2s linear infinite;
   animation-iteration-count: infinite;
 }
