--- a/Applications.html
+++ b/Applications.html
@@ -2,8 +2,9 @@
     <html lang="en"></html>
     <head>
         <title>Applications</title>
+        <link rel="icon" type="image/x-icon" href="main.png">
         <div id="main">
-          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <button id= "btn5">Applications</button> <a href="Rules.html"><button id= "btn1">Rules</button></a> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Main.html"><button id= "btn1">Main</button></a>
+          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id= "btn1">Downloads</button></a> <button id= "btn5">Applications</button> <a href="Rules.html"><button id= "btn1">Rules</button></a> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Main.html"><button id= "btn1">Main</button></a>
           </div>
           <h2>Applications</h2>
           <div id="Applications">
@@ -17,7 +18,7 @@
     <body>
 <style>
 #main {
-  width: 700px;
+  width: 800px;
 }
 
 img{
