--- a/Main.html
+++ b/Main.html
@@ -4,7 +4,7 @@
         <title>LightStudios</title>
         <link rel="icon" type="image/x-icon" href="main.png">
         <div id="main">
-          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Applications.html"><button id= "btn1">Applications</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a> <a href="Info.html"><button id= "btn1">Info</button></a> <button id= "btn5">Main</button>
+          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id= "btn1">Downloads</button></a> <a href="Applications.html"><button id= "btn1">Applications</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a> <a href="Info.html"><button id= "btn1">Info</button></a> <button id= "btn5">Main</button>
           </div>
           <h2>Our next game is launching in!</h2>
           <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +45,7 @@ var x = setInterval(function() {
     <body>
         <style>
 #main {
-  width: 700px;
+  width: 800px;
 }
 
 video {
