--- a/Rules.html
+++ b/Rules.html
@@ -2,8 +2,9 @@
     <html lang="en"></html>
     <head>
         <title>Rules</title>
+        <link rel="icon" type="image/x-icon" href="main.png">
         <div id="main">
-          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Applications.html"><button id= "btn1">Applications</button></a> <button id= "btn5">Rules</button> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Main.html"><button id= "btn1">Main</button></a>
+          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id= "btn1">Downloads</button></a> <a href="Applications.html"><button id= "btn1">Applications</button></a> <button id= "btn5">Rules</button> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Main.html"><button id= "btn1">Main</button></a>
           </div>
           <h2>Rules</h2>
           <div style="text-align: center;">
@@ -25,7 +26,7 @@
     <body>
 <style>
 #main {
-  width: 700px;
+  width: 800px;
 }
 
 #btn5 {
